WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41158
WebKit2 build broken on Windows
https://bugs.webkit.org/show_bug.cgi?id=41158
Summary
WebKit2 build broken on Windows
Adam Roben (:aroben)
Reported
2010-06-24 07:29:49 PDT
WebKit2 build broken on Windows
Attachments
Patch
(22.63 KB, patch)
2010-06-24 07:33 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-06-24 07:33:07 PDT
Created
attachment 59654
[details]
Patch
WebKit Review Bot
Comment 2
2010-06-24 07:34:58 PDT
Attachment 59654
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebKit2/UIProcess/Plugins/win/PluginInfoStoreWin.cpp:26: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 3
2010-06-24 07:45:50 PDT
Committed
r61762
: <
http://trac.webkit.org/changeset/61762
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug