Windows build fix

Fixes <http://webkit.org/b/41158>.

Reviewed by Anders Carlsson.

* Shared/win/UpdateChunk.cpp: Updated header name.

* UIProcess/Plugins/win/PluginInfoStoreWin.cpp: Added.
(WebKit::PluginInfoStore::pluginDirectories):
(WebKit::PluginInfoStore::pluginPathsInDirectory):
(WebKit::PluginInfoStore::getPluginInfo):
(WebKit::PluginInfoStore::shouldUsePlugin):
Stubbed these out.

* win/WebKit2.vcproj: Added UIProcess/Plugins to the include path for
all configurations. Added UIProcess/Plugins files to the project.

Canonical link: https://commits.webkit.org/52769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61762 268f45cc-cd09-0410-ab3c-d52691b4dbfc